# GLSL-path-tracer

./: .gitignore  CMakeLists.txt
include/: renderengine.h
shaders/: default_frag.glsl  noise_test_frag.glsl  output_frag.glsl  output_vert.glsl  pt_frag.glsl  pt_vert.glsl  test_frag.glsl
src/: main.cpp  renderengine.cpp
